# Flipper_Project_Cpp

./: .gitignore  CMakeLists.txt  Flipper_Project_Cpp.code-workspace  OpenGL.txt  README.md
examples/: EBO_uniform_shader_example.cpp  textures_example.cpp  transform_matrix_example.cpp  triangles_rectangle_example.cpp
include/: camera.hpp  construct.hpp  entity.hpp  environment.hpp  item.hpp  itemBuffer.hpp  packet.hpp  shader.hpp
include/glad/: glad.h
shaders/: fShaderCube.fs  fShaderLightSource.fs  fragmentShaderCubes.fs  fragmentShaderGround.fs  fragmentShaderRec.fs  fragmentShaderRec.txt  vShaderCube.vs  vertexShaderGround.vs  vertexShaderRec.txt  vertexShaderRec.vs
src/: camera.cpp  entity.cpp  environment.cpp  glad.c  item.cpp  itemBuffer.cpp  main.cpp  main_test.cpp  packet.cpp  shader.cpp
